Fixed width of bigDiv so that call graphs don't wrap

--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@
 .bigDiv {
     text-align: center;
     overflow: hidden;
-    /*width: 40000px;*/
+    width: 50000px;
     margin-top: 20px;
 }
 
